--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,13 @@
 .container {
     width:45%;
 }
+
+path {
+  stroke: white;
+  stroke-width: 0.25px;
+  fill: black;
+}
+
 body {
   background: #197EC1;
 }
